retrieve_ENO_DEV1/objects/Run__c.object
<CustomObject>
    <description>Holds data of a Production/Show in a season.</description>
    <fields>
        <fullName>Age_appropriateness__c</fullName>
        <description>(eg 12+ yrs)</description>
        <inlineHelpText>(eg 12+ yrs)</inlineHelpText>
        <label>Age appropriateness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Synopsis__c</fullName>
        <label>Brief Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_From_A_Bare_Stage_Hrs__c</fullName>
        <description>(hrs)</description>
        <inlineHelpText>Specify the number of hours needed to build from a bare stage</inlineHelpText>
        <label>Build From A Bare Stage (hrs)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Build_Sessions_Required__c</fullName>
        <label>Build Sessions Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_O_To_A_Bare_Stage_hrs__c</fullName>
        <description>(hrs)</description>
        <inlineHelpText>Specify the number of hours from C/O to a bare stage</inlineHelpText>
        <label>C/O To A Bare Stage (hrs)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_warnings__c</fullName>
        <inlineHelpText>Such as; racism, misogyny, death, upsetting scenes etc.</inlineHelpText>
        <label>Content warnings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Build_Reservation__c</fullName>
        <description>Lookup Rollup summary of the Date of the First associated Reservation with the type Build</description>
        <label>Date of First Build Reservation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Covers_Reservation__c</fullName>
        <description>Lookup Rollup summary of the date of the First reservation with the type Covers</description>
        <label>Date of First Covers Reservation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Music_Rehearsal__c</fullName>
        <description>Lookup Rollup summary of the date of the first reservation with the type &apos;Music Rehearsal&apos;</description>
        <label>Date of First Music Rehearsal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Production_Rehearsal__c</fullName>
        <description>Lookup Rollup Summary of the date of the associated reservation with the type Production Rehearsal, and the earliest start date</description>
        <label>Date of First Production Rehearsal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_S_P_Rehearsal__c</fullName>
        <description>Lookup Rollup summary of the date of the first reservation with the type &apos;Onstage Rehearsal&apos;</description>
        <label>Date of First S&amp;P Rehearsal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extreme_Violence__c</fullName>
        <label>Extreme Violence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Performance_Date__c</fullName>
        <label>First Performance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flashing_Lights_Warnings__c</fullName>
        <label>Flashing Lights Warnings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrumentation__c</fullName>
        <description>[eg Nixon: 2[1.picc].2[1.cor].3[Ebcl.2.bcl].0 4sax(S,2A,Bar) 0.3.3.0 1Perc str(min:6.6.4.4.2)</description>
        <inlineHelpText>[eg Nixon: 2[1.picc].2[1.cor].3[Ebcl.2.bcl].0 4sax(S,2A,Bar) 0.3.3.0 1Perc str(min:6.6.4.4.2)</inlineHelpText>
        <label>Instrumentation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Performance_Date__c</fullName>
        <label>Last Performance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loud_And_Sudden_Noises__c</fullName>
        <label>Loud And Sudden Noises</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Children__c</fullName>
        <label>No. Of Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Dancers__c</fullName>
        <label>No. Of Dancers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Dressing_Rooms_Required__c</fullName>
        <label>No. Of Dressing Rooms Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_ENO_Chorus_Used__c</fullName>
        <description>Incl. breakdown of SATB</description>
        <inlineHelpText>Incl. breakdown of SATB</inlineHelpText>
        <label>No. Of ENO Chorus Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Extra_Chorus_Used__c</fullName>
        <description>incl breakdown of SATB</description>
        <inlineHelpText>incl breakdown of SATB</inlineHelpText>
        <label>No. Of Extra Chorus Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Trailers_Required__c</fullName>
        <inlineHelpText>(SPC)</inlineHelpText>
        <label>No. Of Trailers Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Actors__c</fullName>
        <label>No. of Actors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Chorus_Production_Reservations__c</fullName>
        <description>Lookup Rollup summary of the number of associated reservations with the reservation type &apos;Chorus Production&apos;</description>
        <label>Number of Chorus Production Reservations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Chorus_Rep_Reservations__c</fullName>
        <description>Lookup Rollup summary of the number of associated reservations with the type &apos;Chorus Reps&apos;</description>
        <label>Number of Chorus Rep Reservations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_DR_Rehearsals__c</fullName>
        <label>Number of DR Rehearsals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Evening_Performances__c</fullName>
        <description>Lookup Roll up summary count of the number of associated reservations with the type Performance Evening</description>
        <label>Number of Evening Performances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Matinee_Performances__c</fullName>
        <description>Lookup Roll up summary to count the number of Matinee Performances</description>
        <label>Number of Matinee Performances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Orchestral_Rehearsals__c</fullName>
        <description>Lookup Rollupsummary of the number of associated reservations with the type Orchestral rehearsals</description>
        <label>Number of Orchestral Rehearsals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PDR_Rehearsals__c</fullName>
        <label>Number of PDR Rehearsals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Performances__c</fullName>
        <description>Populated by the Declarative Lookup Rollup summary tool</description>
        <label>Number of Performances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_S_O_Rehearsals__c</fullName>
        <label>Number of S&amp;O Rehearsals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_S_P_Rehearsals__c</fullName>
        <description>Lookup Rollup summary of the number of associated reservations with the type S&amp;P</description>
        <label>Number of S&amp;P Rehearsals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sitz_Reservations__c</fullName>
        <description>Lookup Rollup summary field for the number of associated reservations with the type &apos;Sitz&apos;</description>
        <label>Number of Sitz Reservations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Technical_Rehearsals__c</fullName>
        <description>Lookup Rollup Summary of the Number of associated Reservations with the type &apos;Technical Rehearsal&apos;</description>
        <label>Number of Technical Rehearsals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Performers__c</fullName>
        <description>(eg circus/acrobats etc)</description>
        <label>Other Performers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Particular_position_required_for_BSL_int__c</fullName>
        <description>If no appropriate position etc</description>
        <label>Position required for BSL interpreter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Special_factors_onstage__c</fullName>
        <description>(eg 5 cars in Carmen require dock to be clear around shows)</description>
        <label>Performance Special Factors onstage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Show_Action_Before_Curtain_Up_Time__c</fullName>
        <inlineHelpText>(mins before curtain up and description)</inlineHelpText>
        <label>Pre Show Action Before Curtain Up Time?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_Category__c</fullName>
        <description>eg Opera Lover Favourite/ Baroque</description>
        <label>Production Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Runs</relationshipLabel>
        <relationshipName>Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rehearsal_Special_Factors__c</fullName>
        <description>(eg revolve required in rehearsal room)</description>
        <inlineHelpText>e.g. revolve required in rehearsal room</inlineHelpText>
        <label>Rehearsal Special Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPX__c</fullName>
        <description>(guns/naked flame etc)</description>
        <label>SPX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>95/96</fullName>
                </value>
                <value>
                    <fullName>96/97</fullName>
                </value>
                <value>
                    <fullName>97/98</fullName>
                </value>
                <value>
                    <fullName>98/99</fullName>
                </value>
                <value>
                    <fullName>99/00</fullName>
                </value>
                <value>
                    <fullName>00/01</fullName>
                </value>
                <value>
                    <fullName>01/02</fullName>
                </value>
                <value>
                    <fullName>03/04</fullName>
                </value>
                <value>
                    <fullName>05/06</fullName>
                </value>
                <value>
                    <fullName>07/08</fullName>
                </value>
                <value>
                    <fullName>08/09</fullName>
                </value>
                <value>
                    <fullName>09/10</fullName>
                </value>
                <value>
                    <fullName>10/11</fullName>
                </value>
                <value>
                    <fullName>11/12</fullName>
                </value>
                <value>
                    <fullName>12/13</fullName>
                </value>
                <value>
                    <fullName>13/14</fullName>
                </value>
                <value>
                    <fullName>14/15</fullName>
                </value>
                <value>
                    <fullName>15/16</fullName>
                </value>
                <value>
                    <fullName>16/17</fullName>
                </value>
                <value>
                    <fullName>17/18</fullName>
                </value>
                <value>
                    <fullName>18/19</fullName>
                </value>
                <value>
                    <fullName>19/20</fullName>
                </value>
                <value>
                    <fullName>20/21</fullName>
                </value>
                <value>
                    <fullName>21/22</fullName>
                </value>
                <value>
                    <fullName>22/23</fullName>
                </value>
                <value>
                    <fullName>23/24</fullName>
                </value>
                <value>
                    <fullName>24/25</fullName>
                </value>
                <value>
                    <fullName>25/26</fullName>
                </value>
                <value>
                    <fullName>26/27</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sexual_or_Explicit_Content_Nudity__c</fullName>
        <label>Sexual or Explicit Content / Nudity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strong_Language__c</fullName>
        <label>Strong Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Studio_dur_no_of_sessions__c</fullName>
        <inlineHelpText>Eg 4 weeks/ 41 sessions</inlineHelpText>
        <label>Studio (dur &amp; no of sessions)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Duration__c</fullName>
        <description>Sum of all Approx Run Times in Minutes</description>
        <label>Total Duration (in Minutes)</label>
        <summarizedField>Approx_Running_Timing__c.Duration_In_Mins__c</summarizedField>
        <summaryForeignKey>Approx_Running_Timing__c.Run__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Run</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>